k8s/manual/04-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "tmc-cluster-autoscaler"
  namespace: "tmc-cluster-autoscaler"
  labels:
    app: "tmc-cluster-autoscaler"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: tmc-cluster-autoscaler-https-secret
      hosts:
        - tmc-cas.cluster-1.poc.yogendra.me
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: tmc-cluster-autoscaler
              servicePort: 80
